force-app/main/default/objects/Profile__c/fields/accountNumber__c.field-meta.xml
<CustomField>
    <fullName>accountNumber__c</fullName>
    <description>Field for IEC</description>
    <label>accountNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>