force-app/main/default/objects/Profile__c/fields/accountType__c.field-meta.xml
<CustomField>
    <fullName>accountType__c</fullName>
    <description>Field for IEC</description>
    <label>accountType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>