force-app/main/default/objects/Profile__c/fields/activeCompliance__c.field-meta.xml
<CustomField>
    <fullName>activeCompliance__c</fullName>
    <label>activeCompliance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>