force-app/main/default/objects/Profile__c/fields/Activity_Class__c.field-meta.xml
<CustomField>
    <fullName>Activity_Class__c</fullName>
    <label>Activity Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>