force-app/main/default/objects/Profile__c/fields/Activity_Group__c.field-meta.xml
<CustomField>
    <fullName>Activity_Group__c</fullName>
    <label>Activity Group</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>