force-app/main/default/objects/Profile__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <label>address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>