force-app/main/default/objects/Profile__c/fields/alerts__c.field-meta.xml
<CustomField>
    <fullName>alerts__c</fullName>
    <label>alerts</label>
    <length>50</length>
    <type>Text</type>
</CustomField>