force-app/main/default/objects/Profile__c/fields/alternateAddress__c.field-meta.xml
<CustomField>
    <fullName>alternateAddress__c</fullName>
    <label>alternateAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>