force-app/main/default/objects/Profile__c/fields/areaCode__c.field-meta.xml
<CustomField>
    <fullName>areaCode__c</fullName>
    <label>areaCode</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>