force-app/main/default/objects/Profile__c/fields/assessingOfficerNumber__c.field-meta.xml
<CustomField>
    <fullName>assessingOfficerNumber__c</fullName>
    <label>assessingOfficerNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>