force-app/main/default/objects/Profile__c/fields/authorisedCapital__c.field-meta.xml
<CustomField>
    <fullName>authorisedCapital__c</fullName>
    <label>authorisedCapital</label>
    <length>100</length>
    <type>Text</type>
</CustomField>