force-app/main/default/objects/Profile__c/fields/bank__c.field-meta.xml
<CustomField>
    <fullName>bank__c</fullName>
    <description>Field for IEC</description>
    <label>bank</label>
    <length>100</length>
    <type>Text</type>
</CustomField>