force-app/main/default/objects/Profile__c/fields/bin__c.field-meta.xml
<CustomField>
    <fullName>bin__c</fullName>
    <description>Field for IEC</description>
    <label>bin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>