force-app/main/default/objects/Profile__c/fields/branch__c.field-meta.xml
<CustomField>
    <fullName>branch__c</fullName>
    <label>Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>