force-app/main/default/objects/Profile__c/fields/branches__c.field-meta.xml
<CustomField>
    <fullName>branches__c</fullName>
    <description>Field for IEC</description>
    <label>branches</label>
    <length>100</length>
    <type>Text</type>
</CustomField>