force-app/main/default/objects/Profile__c/fields/buildingName__c.field-meta.xml
<CustomField>
    <fullName>buildingName__c</fullName>
    <label>buildingName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>