force-app/main/default/objects/Profile__c/fields/class__c.field-meta.xml
<CustomField>
    <fullName>class__c</fullName>
    <label>class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>