force-app/main/default/objects/Profile__c/fields/complianceRating__c.field-meta.xml
<CustomField>
    <fullName>complianceRating__c</fullName>
    <description>Field for GST</description>
    <label>complianceRating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>