force-app/main/default/objects/Profile__c/fields/constitutionOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>constitutionOfBusiness__c</fullName>
    <description>Field for GST</description>
    <label>constitutionOfBusiness</label>
    <length>100</length>
    <type>Text</type>
</CustomField>