force-app/main/default/objects/Profile__c/fields/contacted__c.field-meta.xml
<CustomField>
    <fullName>contacted__c</fullName>
    <description>Field for GST</description>
    <label>contacted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>