force-app/main/default/objects/Profile__c/fields/countryOfIncorporation__c.field-meta.xml
<CustomField>
    <fullName>countryOfIncorporation__c</fullName>
    <label>countryOfIncorporation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>