force-app/main/default/objects/Profile__c/fields/Date_Of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Incorporation__c</fullName>
    <label>Date Of Incorporation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>