force-app/main/default/objects/Profile__c/fields/Date_Of_Vat_Registration__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Vat_Registration__c</fullName>
    <label>Date Of Vat Registration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>