force-app/main/default/objects/Profile__c/fields/dateOfAnnualReturnFiled__c.field-meta.xml
<CustomField>
    <fullName>dateOfAnnualReturnFiled__c</fullName>
    <label>dateOfAnnualReturnFiled</label>
    <length>100</length>
    <type>Text</type>
</CustomField>