force-app/main/default/objects/Profile__c/fields/dateOfBalanceSheet__c.field-meta.xml
<CustomField>
    <fullName>dateOfBalanceSheet__c</fullName>
    <label>dateOfBalanceSheet</label>
    <length>100</length>
    <type>Text</type>
</CustomField>