force-app/main/default/objects/Profile__c/fields/dateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>dateOfBirth__c</fullName>
    <label>dateOfBirth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>