force-app/main/default/objects/Profile__c/fields/dateOfIecAllotment__c.field-meta.xml
<CustomField>
    <fullName>dateOfIecAllotment__c</fullName>
    <description>Field for IEC</description>
    <label>dateOfIecAllotment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>