force-app/main/default/objects/Profile__c/fields/dateOfIncorporation__c.field-meta.xml
<CustomField>
    <fullName>dateOfIncorporation__c</fullName>
    <label>dateOfIncorporation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>