force-app/main/default/objects/Profile__c/fields/dateOfIssuance__c.field-meta.xml
<CustomField>
    <fullName>dateOfIssuance__c</fullName>
    <description>Field for Pans</description>
    <label>dateOfIssuance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>