force-app/main/default/objects/Profile__c/fields/dateOfLastAgm__c.field-meta.xml
<CustomField>
    <fullName>dateOfLastAgm__c</fullName>
    <label>dateOfLastAgm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>