force-app/main/default/objects/Profile__c/fields/dateOfOrder__c.field-meta.xml
<CustomField>
    <fullName>dateOfOrder__c</fullName>
    <description>Field for IEC</description>
    <label>dateOfOrder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>