force-app/main/default/objects/Profile__c/fields/dateOfRegistration__c.field-meta.xml
<CustomField>
    <fullName>dateOfRegistration__c</fullName>
    <description>Field for IEC</description>
    <label>dateOfRegistration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>