force-app/main/default/objects/Profile__c/fields/dateOfRegistrationCancellation__c.field-meta.xml
<CustomField>
    <fullName>dateOfRegistrationCancellation__c</fullName>
    <description>Field for GST</description>
    <label>dateOfRegistrationCancellation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>