force-app/main/default/objects/Profile__c/fields/dateOfStatementOfAccountsAndSolvencyFil__c.field-meta.xml
<CustomField>
    <fullName>dateOfStatementOfAccountsAndSolvencyFil__c</fullName>
    <label>dateOfStatementOfAccountsAndSolvencyFil</label>
    <length>100</length>
    <type>Text</type>
</CustomField>