force-app/main/default/objects/Profile__c/fields/dateOfVatRegistration__c.field-meta.xml
<CustomField>
    <fullName>dateOfVatRegistration__c</fullName>
    <description>Field for GST</description>
    <label>dateOfVatRegistration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>