force-app/main/default/objects/Profile__c/fields/dealerType__c.field-meta.xml
<CustomField>
    <fullName>dealerType__c</fullName>
    <description>Field for GST</description>
    <label>dealerType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>