force-app/main/default/objects/Profile__c/fields/deductorCategory__c.field-meta.xml
<CustomField>
    <fullName>deductorCategory__c</fullName>
    <label>deductorCategory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>