force-app/main/default/objects/Profile__c/fields/Description_Of_Main_Division__c.field-meta.xml
<CustomField>
    <fullName>Description_Of_Main_Division__c</fullName>
    <label>Description Of Main Division</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>