force-app/main/default/objects/Profile__c/fields/details__c.field-meta.xml
<CustomField>
    <fullName>details__c</fullName>
    <label>details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>