force-app/main/default/objects/Profile__c/fields/din__c.field-meta.xml
<CustomField>
    <fullName>din__c</fullName>
    <label>din</label>
    <length>50</length>
    <type>Text</type>
</CustomField>