force-app/main/default/objects/Profile__c/fields/dinDateOfApproval__c.field-meta.xml
<CustomField>
    <fullName>dinDateOfApproval__c</fullName>
    <label>dinDateOfApproval</label>
    <length>50</length>
    <type>Text</type>
</CustomField>