force-app/main/default/objects/Profile__c/fields/dispatchDate__c.field-meta.xml
<CustomField>
    <fullName>dispatchDate__c</fullName>
    <description>Field for tan</description>
    <label>dispatchDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>