force-app/main/default/objects/Profile__c/fields/divisionName__c.field-meta.xml
<CustomField>
    <fullName>divisionName__c</fullName>
    <label>divisionName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>