force-app/main/default/objects/Profile__c/fields/dscExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>dscExpiryDate__c</fullName>
    <label>dscExpiryDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>