force-app/main/default/objects/Profile__c/fields/emailDomains__c.field-meta.xml
<CustomField>
    <fullName>emailDomains__c</fullName>
    <label>emailDomains</label>
    <length>100</length>
    <type>Text</type>
</CustomField>