force-app/main/default/objects/Profile__c/fields/Entity_Class__c.field-meta.xml
<CustomField>
    <fullName>Entity_Class__c</fullName>
    <label>Entity Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>