force-app/main/default/objects/Profile__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <label>Entity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>