force-app/main/default/objects/Profile__c/fields/entityType__c.field-meta.xml
<CustomField>
    <fullName>entityType__c</fullName>
    <description>Field for IEC</description>
    <label>entityType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>