force-app/main/default/objects/Profile__c/fields/expiryDate__c.field-meta.xml
<CustomField>
    <fullName>expiryDate__c</fullName>
    <description>Field for IEC</description>
    <label>expiryDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>