force-app/main/default/objects/Profile__c/fields/exporterType__c.field-meta.xml
<CustomField>
    <fullName>exporterType__c</fullName>
    <description>Field for IEC</description>
    <label>exporterType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>