force-app/main/default/objects/Profile__c/fields/fatherName__c.field-meta.xml
<CustomField>
    <fullName>fatherName__c</fullName>
    <label>fatherName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>