force-app/main/default/objects/Profile__c/fields/fileDate__c.field-meta.xml
<CustomField>
    <fullName>fileDate__c</fullName>
    <description>Field for IEC</description>
    <label>fileDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>