force-app/main/default/objects/Profile__c/fields/fileNumber__c.field-meta.xml
<CustomField>
    <fullName>fileNumber__c</fullName>
    <description>Field for IEC</description>
    <label>fileNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>