force-app/main/default/objects/Profile__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>gender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>