force-app/main/default/objects/Profile__c/fields/gstin__c.field-meta.xml
<CustomField>
    <fullName>gstin__c</fullName>
    <description>Field for GST</description>
    <label>gstin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>