force-app/main/default/objects/Profile__c/fields/iec__c.field-meta.xml
<CustomField>
    <fullName>iec__c</fullName>
    <description>Field for IEC</description>
    <label>iec</label>
    <length>100</length>
    <type>Text</type>
</CustomField>