force-app/main/default/objects/Profile__c/fields/iecGateStatus__c.field-meta.xml
<CustomField>
    <fullName>iecGateStatus__c</fullName>
    <description>Field for IEC</description>
    <label>iecGateStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>