force-app/main/default/objects/Profile__c/fields/iecPrintStatus__c.field-meta.xml
<CustomField>
    <fullName>iecPrintStatus__c</fullName>
    <label>iecPrintStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>