force-app/main/default/objects/Profile__c/fields/isDscRegistered__c.field-meta.xml
<CustomField>
    <fullName>isDscRegistered__c</fullName>
    <label>isDscRegistered</label>
    <length>50</length>
    <type>Text</type>
</CustomField>