force-app/main/default/objects/Profile__c/fields/isFieldVisitConducted__c.field-meta.xml
<CustomField>
    <fullName>isFieldVisitConducted__c</fullName>
    <description>Field for GST</description>
    <label>isFieldVisitConducted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>