force-app/main/default/objects/Profile__c/fields/isMoreAdditionalPlaces__c.field-meta.xml
<CustomField>
    <fullName>isMoreAdditionalPlaces__c</fullName>
    <description>Field for GST</description>
    <label>isMoreAdditionalPlaces</label>
    <length>100</length>
    <type>Text</type>
</CustomField>