force-app/main/default/objects/Profile__c/fields/isPanInactive__c.field-meta.xml
<CustomField>
    <fullName>isPanInactive__c</fullName>
    <description>Field for Pans</description>
    <label>isPanInactive</label>
    <length>100</length>
    <type>Text</type>
</CustomField>