force-app/main/default/objects/Profile__c/fields/issueDate__c.field-meta.xml
<CustomField>
    <fullName>issueDate__c</fullName>
    <description>Field for IEC</description>
    <label>issueDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>