force-app/main/default/objects/Profile__c/fields/issuedBy__c.field-meta.xml
<CustomField>
    <fullName>issuedBy__c</fullName>
    <description>Field for IEC</description>
    <label>issuedBy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>