force-app/main/default/objects/Profile__c/fields/kid__c.field-meta.xml
<CustomField>
    <fullName>kid__c</fullName>
    <label>kid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>