force-app/main/default/objects/Profile__c/fields/lastUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>lastUpdatedDate__c</fullName>
    <description>Field for GST</description>
    <label>lastUpdatedDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>