force-app/main/default/objects/Profile__c/fields/legalName__c.field-meta.xml
<CustomField>
    <fullName>legalName__c</fullName>
    <description>Field for GST</description>
    <label>legalName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>