force-app/main/default/objects/Profile__c/fields/Main_Divison_Of_Business_Activity__c.field-meta.xml
<CustomField>
    <fullName>Main_Divison_Of_Business_Activity__c</fullName>
    <label>Main Divison Of Business Activity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>