force-app/main/default/objects/Profile__c/fields/mca__c.field-meta.xml
<CustomField>
    <fullName>mca__c</fullName>
    <description>Field for MCA</description>
    <label>mca</label>
    <length>100</length>
    <type>Text</type>
</CustomField>