force-app/main/default/objects/Profile__c/fields/mcaEntityId__c.field-meta.xml
<CustomField>
    <fullName>mcaEntityId__c</fullName>
    <description>Field for Pans</description>
    <label>mcaEntityId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>