force-app/main/default/objects/Profile__c/fields/mcaEntityType__c.field-meta.xml
<CustomField>
    <fullName>mcaEntityType__c</fullName>
    <description>Field for Pans</description>
    <label>mcaEntityType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>