force-app/main/default/objects/Profile__c/fields/nationality__c.field-meta.xml
<CustomField>
    <fullName>nationality__c</fullName>
    <label>nationality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>