force-app/main/default/objects/Profile__c/fields/Nature_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Business__c</fullName>
    <label>Nature Of Business</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>