force-app/main/default/objects/Profile__c/fields/Nature_Of_Trade__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Trade__c</fullName>
    <label>Nature Of Trade</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>