force-app/main/default/objects/Profile__c/fields/natureOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>natureOfBusiness__c</fullName>
    <description>Field for GST</description>
    <label>natureOfBusiness</label>
    <length>100</length>
    <type>Text</type>
</CustomField>