force-app/main/default/objects/Profile__c/fields/natureOfTrade__c.field-meta.xml
<CustomField>
    <fullName>natureOfTrade__c</fullName>
    <description>Field for GST</description>
    <label>natureOfTrade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>