force-app/main/default/objects/Profile__c/fields/orderNumber__c.field-meta.xml
<CustomField>
    <fullName>orderNumber__c</fullName>
    <description>Field for IEC</description>
    <label>orderNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>