force-app/main/default/objects/Profile__c/fields/pan__c.field-meta.xml
<CustomField>
    <fullName>pan__c</fullName>
    <description>Field for Pans</description>
    <label>pan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>