force-app/main/default/objects/Profile__c/fields/pans__c.field-meta.xml
<CustomField>
    <fullName>pans__c</fullName>
    <label>pans</label>
    <length>50</length>
    <type>Text</type>
</CustomField>