force-app/main/default/objects/Profile__c/fields/panType__c.field-meta.xml
<CustomField>
    <fullName>panType__c</fullName>
    <description>Field for Pans</description>
    <label>panType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>