force-app/main/default/objects/Profile__c/fields/pincode__c.field-meta.xml
<CustomField>
    <fullName>pincode__c</fullName>
    <description>Field for Pans</description>
    <label>pincode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>