force-app/main/default/objects/Profile__c/fields/place__c.field-meta.xml
<CustomField>
    <fullName>place__c</fullName>
    <description>Field for IEC</description>
    <label>place</label>
    <length>100</length>
    <type>Text</type>
</CustomField>