force-app/main/default/objects/Profile__c/fields/Profile_IEC__c.field-meta.xml
<CustomField>
    <fullName>Profile_IEC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipName>Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>