force-app/main/default/objects/Profile__c/fields/rcmcNumber__c.field-meta.xml
<CustomField>
    <fullName>rcmcNumber__c</fullName>
    <description>Field for IEC</description>
    <label>rcmcNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>