force-app/main/default/objects/Profile__c/fields/Registered_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address__c</fullName>
    <label>Registered Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>