force-app/main/default/objects/Profile__c/fields/registrationNumber__c.field-meta.xml
<CustomField>
    <fullName>registrationNumber__c</fullName>
    <description>Field for IEC</description>
    <label>registrationNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>