force-app/main/default/objects/Profile__c/fields/signatories__c.field-meta.xml
<CustomField>
    <fullName>signatories__c</fullName>
    <description>Field for GST</description>
    <label>signatories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>