force-app/main/default/objects/Profile__c/fields/signatoriesContact__c.field-meta.xml
<CustomField>
    <fullName>signatoriesContact__c</fullName>
    <description>Field for GST</description>
    <label>signatoriesContact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>