force-app/main/default/objects/Profile__c/fields/sourceUri__c.field-meta.xml
<CustomField>
    <fullName>sourceUri__c</fullName>
    <label>sourceUri</label>
    <length>100</length>
    <type>Text</type>
</CustomField>