force-app/main/default/objects/Profile__c/fields/subCategory__c.field-meta.xml
<CustomField>
    <fullName>subCategory__c</fullName>
    <description>Tan field</description>
    <label>subCategory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>