force-app/main/default/objects/Profile__c/fields/tan__c.field-meta.xml
<CustomField>
    <fullName>tan__c</fullName>
    <description>Field for tan</description>
    <label>tan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>