force-app/main/default/objects/Profile__c/fields/tanStatus__c.field-meta.xml
<CustomField>
    <fullName>tanStatus__c</fullName>
    <description>Field for tan</description>
    <label>tanStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>