force-app/main/default/objects/Profile__c/fields/tenureBeginDate__c.field-meta.xml
<CustomField>
    <fullName>tenureBeginDate__c</fullName>
    <label>tenureBeginDate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>