force-app/main/default/objects/Profile__c/fields/tenureEndDate__c.field-meta.xml
<CustomField>
    <fullName>tenureEndDate__c</fullName>
    <label>tenureEndDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>