force-app/main/default/objects/Profile__c/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <description>Field for tan</description>
    <label>timestamp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>