force-app/main/default/objects/Profile__c/fields/tin__c.field-meta.xml
<CustomField>
    <fullName>tin__c</fullName>
    <description>Field for GST</description>
    <label>tin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>