force-app/main/default/objects/Profile__c/fields/tradeName__c.field-meta.xml
<CustomField>
    <fullName>tradeName__c</fullName>
    <label>tradeName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>