force-app/main/default/objects/Profile__c/fields/yearMonthOfIssuance__c.field-meta.xml
<CustomField>
    <fullName>yearMonthOfIssuance__c</fullName>
    <description>Field for Pans</description>
    <label>yearMonthOfIssuance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>