force-app/main/default/objects/Profile__c/recordTypes/GST_Registrations.recordType-meta.xml
<RecordType>
    <fullName>GST_Registrations</fullName>
    <active>true</active>
    <label>GST Registrations</label>
</RecordType>