force-app/main/default/objects/Profile__c/recordTypes/GST_Registrations_Branches.recordType-meta.xml
<RecordType>
    <fullName>GST_Registrations_Branches</fullName>
    <active>true</active>
    <description>Use this record type for storing address from GST.</description>
    <label>GST Registrations-Branches</label>
</RecordType>