force-app/main/default/objects/Profile__c/recordTypes/IEC_Registration.recordType-meta.xml
<RecordType>
    <fullName>IEC_Registration</fullName>
    <active>true</active>
    <description>For IEC fields</description>
    <label>IEC Registration</label>
</RecordType>