force-app/main/default/objects/Profile__c/recordTypes/IEC_Registration_Registrations.recordType-meta.xml
<RecordType>
    <fullName>IEC_Registration_Registrations</fullName>
    <active>true</active>
    <label>IEC Registration (Registrations)</label>
</RecordType>