force-app/main/default/objects/Profile__c/recordTypes/Management_Profile.recordType-meta.xml
<RecordType>
    <fullName>Management_Profile</fullName>
    <active>true</active>
    <description>For management fields</description>
    <label>Management Profile</label>
</RecordType>