force-app/main/default/objects/Profile__c/recordTypes/MCA_Registration.recordType-meta.xml
<RecordType>
    <fullName>MCA_Registration</fullName>
    <active>true</active>
    <description>MCA fields</description>
    <label>MCA Registration</label>
</RecordType>