force-app/main/default/objects/Profile__c/recordTypes/PAN_Registration.recordType-meta.xml
<RecordType>
    <fullName>PAN_Registration</fullName>
    <active>true</active>
    <description>record type for PAN Registration fields</description>
    <label>PAN Registration</label>
</RecordType>