force-app/main/default/objects/Profile__c/recordTypes/Profile.recordType-meta.xml
<RecordType>
    <fullName>Profile</fullName>
    <active>true</active>
    <description>For profile fields</description>
    <label>Profile</label>
</RecordType>