force-app/main/default/objects/Profile__c/recordTypes/TAN_Registration.recordType-meta.xml
<RecordType>
    <fullName>TAN_Registration</fullName>
    <active>true</active>
    <description>for tan regd fields</description>
    <label>TAN Registration</label>
</RecordType>